Remove use of --illegal-access=permit argLine